buva-frontend-v8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "21"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"buva-frontend","namespace":"buva"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"buva-frontend"}},"template":{"metadata":{"labels":{"app":"buva-frontend"}},"spec":{"containers":[{"image":"docker.io/sarvah031220/buva-frontend:latest","imagePullPolicy":"Always","livenessProbe":{"httpGet":{"path":"/","port":"http"},"initialDelaySeconds":15,"periodSeconds":10},"name":"frontend","ports":[{"containerPort":8 [...]
  creationTimestamp: "2026-08-20T03:37:10Z"
  generation: 21
  name: buva-frontend
  namespace: buva
  resourceVersion: "9168596"
  uid: 0197bc98-a387-4272-a1a9-fbc12d41a857
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: buva-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-08-28T07:37:32Z"
      creationTimestamp: null
      labels:
        app: buva-frontend
    spec:
      containers:
      - image: localhost:5000/buva-frontend:v8
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /uploads
          name: product-images
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: default.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: product-images
        persistentVolumeClaim:
          claimName: buva-product-images
      - configMap:
          defaultMode: 420
          name: buva-frontend-nginx
        name: nginx-config
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-08-26T04:14:41Z"
    lastUpdateTime: "2026-08-26T04:14:41Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-08-20T03:37:10Z"
    lastUpdateTime: "2026-08-28T10:00:41Z"
    message: ReplicaSet "buva-frontend-5b9cc97575" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 21
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
